--- a/Stanimirova_Exercise_11_ModelAssessment.Rmd
+++ b/Stanimirova_Exercise_11_ModelAssessment.Rmd
@@ -58,12 +58,9 @@ for(i in 1:12){
 
 **Question 1:** What pools and fluxes were most affected by assimilating MODIS LAI and which were least affected?  Does this make sense?
 
-Bleaf, LAI, and litter were the most affected by assimilating MODIS LAI. It makes sense because these pools and fluxes are dependent on the leaf area such as leaf biomass, litter .
-They are calculated using LAI 
+Bleaf, LAI, and litter were the most affected by assimilating MODIS LAI. It makes sense because these pools and fluxes are dependent on the leaf area. We expect that leaf biomass and leaf litter will be affected by the leaf area. 
 
-
-Least affected - Bwood, BSOM and CWD, and Rh  
-yes it makes sense 
+The least affected pools and fluxes were: Bwood, BSOM, CWD, and Rh. Again this makes sense because wood biomass, and woody debry are less affected by leaf area.  
 
 
 Model vs. Data
@@ -119,12 +116,13 @@ legend("bottomright",legend=c('obs','1:1','reg'),col=1:3,lwd=3)
 
 The particle filter model seems to perform worse than the simple ensemble model because it has a higher RMSE and higher bias. However, both models have a similar correlation with the observations. The two models perform very similarly to one another. There isn't a clear winner. 
 
-When we look at the scatter plots of the observed versus predict NEE, we see that the points are not randomly scattered around the regression line. In fact, it seems like the points are more scattered (more uncertainty) when the models predict negative fluxes compared to when they predict the positive fluxes. When NEE is negative that means that the forest is taking up CO2,  which happens during the day also during the summer. NEE is positive during the night and during the winter time. This means that the model is better at predicting the respiration than the photosynthesis. Day time NEE is harder to predict because there are more processes happening and as a result more sources of error. This difference between day and night (seasons) could be due to the parameter light use efficiency, which is used to calculate the GPP (photosynthesis at the landscape scale). 
+When we look at the scatter plots of the observed versus predict NEE, we see that the points are not randomly scattered around the regression line. In fact, it seems like the points are more scattered (more uncertainty) when the models predict negative fluxes compared to when they predict the positive fluxes. When NEE is positive the points are more closely clustered around the regression line. When NEE is negative that means that the forest is taking up CO2,  which happens during the day and also during the summer. Broadly speaking NEE is positive during the night and during the winter time. This means that the model is better at predicting NEE when respiration is greater than the photosynthesis. Day time NEE is harder to predict because there are more processes happening and as a result more sources of error. This difference between day and night (seasons) could be due to the parameter light use efficiency, which is used to calculate the GPP (photosynthesis at the landscape scale). 
 
 
 **Question 3:** Repeat the daily-mean time-series plot for NEE from the previous section, but add the observed daily-mean NEE to the plot. Make sure to use the gap-filled NEE estimates, since flux data are not missing at random.
 
-All lines align well, they are similar
+All lines align well, the two models and the observed daily-mean time-series of NEE are similar. There is a slight difference during DoY 70-120 when the observed NEE is lower than the two predictions. 
+
 
 ```{r}
 ci.pf  = -apply(apply(output[,,5],2,tapply,DoY,mean),1,quantile,c(0.025,0.5,0.975))
@@ -174,23 +172,18 @@ legend("bottomright",legend=c('obs','1:1','reg'),col=1:3,lwd=3)
 ## example cycle
 plot(L4$DoY,-L4$NEE_st_fMDS,xlim=c(200,210),type='l',lwd=2,ylim=c(-10,20),xlab="Day of Year",ylab="NEE")
 lines(L4$DoY,-NEE.clim,col=4,lwd=2,lty=2)
-lines(L4$DoY,-NEE.ens,col=3,lwd=2,lty=2)
-lines(L4$DoY,-NEE.pf,col=2,lwd=2,lty=2)
+lines(L4$DoY,-NEE.ens,col=2,lwd=2,lty=2)
+lines(L4$DoY,-NEE.pf,col=3,lwd=2,lty=2)
 
-legend("topright",legend=c("Obs","clim", "ens", "pf"),lty=1:2,col=c(1,4,3,2),lwd=2)
+legend("topright",legend=c("Obs","clim", "ens", "pf"),lty=1:2,col=c(1,4,2,3),lwd=2)
 ```
 
 **Question 4:** How does the process model perform relative to the average flux data?
 Which statistics showed the largest differences between the model and climatology?
 
-process model - ensemble and pf 
-In order to assess the performance of the process based model, we compare it against a simple statistical model predicting under the same conditions. The climatology model has no understanding of the ecological process and it outperforms the other models. Sounds like there is something fishy here! 
-The climatology model is a null model, which process-based models can be evaluated against - this serves as a valuable benchmark - it is not unusual for an eco model to fail to beat the climatological null model 
+Both the ensemble and the particle filter are process models. In order to assess the performance of the process based model, we compare it against a simple statistical model predicting under the same conditions. The climatology model has no understanding of the ecological process and it outperforms both the ensemble and pf models. The climatology model serves as a valuable benchmark, which process-based models can be evaluated against. It is not unusual for an eco model to fail to beat the climatological null model as is seen in this case. The bias in the climatology against the observations was very small (0.19) compared to the bias in the ensemble model (1.27) and particle filter (1.66). In addition the RMSE with the climatology model was the lowest (3.22) compared to the other two models. All models are comparable in terms of correlation and slope. 
 
-
-The climatology model performs well against the average flux data, although sometime it underestimates the peak NEE. In addition sometimes NEE drops off more abruptly with the observations compared to the climatology model. The bias in the climatology against the observations was very small (0.19) compared to the bias in the ensemble model (1.25) and particle filter (2.73). In addition the RMSE with the climatology model was the lowest (3.22) compared to the other two models. 
-
-add lines for pf and ens
+The climatology model performs well against the average flux data, although sometimes it underestimates the peak NEE. In addition sometimes NEE drops off more abruptly with the observations compared to the climatology model. The particle filter model also underestimates the peak NEE from observations but the ensemble model seems to capture the peaks better.  
 
 
 Taylor diagram
@@ -225,21 +218,11 @@ legend("topright",legend=c("ens","PF","clim","obsUncert"),col=2:5,pch=20,cex=0.7
 
 **Question 5:** What did you learn about model performance from the Taylor diagram? 
 
-The Taylor diagram illustrates 3 error statistics in one place: RMSE, correlation and the ratio of model variability to observed variability. The data is plotted at 1,0 and the best model is the one that it closest to the data. In this case the best model is the climatology one because it is the closest to the data. 
-
-The model with the lowest error is closest to the point representing the data?? This is not the case, maybe there is something wrong with my model ??
-
-standard deviation on x and y axis! - of predicted to obersved sd 
-x axis is normalized RMSE 
-
-
+The Taylor diagram illustrates 3 diagnostic statistics in one place: RMSE, correlation and the ratio of model variability to observed variability. The data is plotted at 1,0 and the best model is the one that it closest to the data. In this case the best model is the climatology one because it is the closest to the data. The model with the lowest error is closest to the point representing the data. Climatology model has one of the highest correlations, low RMSE and a more similar variability to the observations. The particle filter has a similar correlation, lower standard deviation ratio but it underpredicted the true variability. 
 
 **Question 6:** How do our simple models and flux climatology compare to the ensemble of ecosystem models in Figure 7 of Schwalm et al 2010  "A model-data intercomparison of CO2 exchange across North America: results from the north american carbon program site synthesis". J. Geophys. Res. ?
 
-Our results seem to be comparable. Most models in Schwalm et al 2010 have correlation between 0.8 and 0.95. Our models have a correlation close to or lower than 0.8. Generally speaking our models have a higher RMSE (although difficult to compare because one RMSE is normalized and the other is not) and higher standard deviation ratio. 
-
-mention specific models that are better - different ecosystem models 
-better than some and worst than others 
+Our results seem to be comparable to the ensemble of ecosystem models in Figure 7. Some models in Schwalm et al 2010 have correlation between 0.8 and 0.95. Our models have a correlation close to or lower than 0.8. Our models perform better than some ecosystem models and worse than others. Our models compare well to the following models in Schwam et al.: G, W, J, N, M, K, P, and S. These models have similar correlation and RMSE between 0.5 and 1 but closer to 0.5. They also have a standard deviation ratio close to 1 but lower like our models. N, M, and K seem to perform better than our models because they have similar variability to the observations, higher correlation and RMSE closer to 0.5. 
 
 Time-scales
 -----------
@@ -265,18 +248,8 @@ legend("bottomright",legend=c("obs","ens","PF","clim"),col=1:4,pch=20,cex=0.75)
 
 **Question 7:** What time of day has the largest uncertainty? What does this suggest about what parameter(s) needs to be modified in the model, in what direction, and by approximately how much? In providing this answer, recall the structure of the model as well as the fact that the particle filter has assimilated LAI so we can assume that that term is unbiased for that case.
 
-The largest uncertainty is between 10 am and 3pm. 
-?? which parameter does this suggest needs to be modified ??
+The largest uncertainty is between 8 am and 3pm indicating a diurnal response of the carbon flux to light and temperature. As soon as the sun rises, the models disagree on the magnitude of the CO2 uptake by the vegetation. During this time the model prediction have the highest absolute magnitude difference from each other as well as from the observations and climatology model. In our model we underestimate magnitude of NEE and underpredict GPP. Given the assumption that LAI is unbiased and the fact that PAR and temperature are given, this suggests that the parameter that needs to be modified in the model is the light use efficiency. GPP is calculated by using alpha parameter (LUE), as well as LAI and PAR. The light use efficiency has to be higher. Since the difference between the observed and predicted NEE is about 2, I would need to increase my light use efficiency by 40% from approximately 0.02 to 0.028.  
 
-Is the problem in the light use efficiency - alpha 
-temperature 
-
- in our model we underestimate magnitude of NEE 
-parameters -
-cant tell if structure is wrong if model is not calibrated 
-diurnal cycle gives an indication of whats going wrong, better than the predicted/observed plots 
-underpredciting GPP 
-not LAI so it must be the light use efficiency 
 
 
 The diurnal cycle isn't the only, or nessisarily the largest, time scale that the data or the model varies over. Next, let's use a wavelet transform to look at the times and timescales responsible for the most variability in the data, in the model, and in the residuals. Specifically we'll look at the observations, the ensemble mean, the ensemble residuals, and the "climatology" residuals. In all cases we're using a Morlet wavelet, which is a fairly standard choice of wavelet to characterize sine-like oscillations. In these wavelet plots color intensity indicated power (red = largest) and the periodicity in the y-axis is in terms of 30 min observations, so 48 = 1 day and 17520 = 1 year.
@@ -298,21 +271,12 @@ wavelet.plot(wt.er,add.sig=FALSE,crn.lab="NEE model error")
 
 **Question 8:** What time scales dominate the data? What time scales dominate the model residuals? 
 
-Daily time scales seem to dominate the data - places that are red represent places of high variability in the data. 
-Some right below period of 64 - this is the daily 
-red at 8192 and above -- is this at half a year - dont look at this because it is hatched - also we have only one year so we cant really say anything meaningful about periodicity at the yearly scale 
-why doesnt this go all the way to 1 year?? - is this because we are limiting the results to ones that have high QA/QC
+The wavelet plots quantify how much of the observed variability in the data (NEE obs) and model (NEE model error) are associated with a given timescale. This method can detect changes in the importance of different time scales through time. 
 
-The model residuals: 
-Same as above??
+Daily time scales seem to dominate the data as seen by high power values corresponding to roughly a period of 48. Red represent places of high variability in the data. We have only one year so we cant really say anything meaningful about periodicity at the yearly scale. High power is seen at the daily scale and mostly in the summer time. This makes sense because the flluxes are larger at that time and we have more processes going on. There is a seasonal effect because the daily time scale does not dominate the signal all year round.  
+Besides the summer, there is also a daily time signal in the fall, where we witness in the NEE observations above that there is an increase in the NEE flux from the biosphere to the atmosphere. This is probably due to some of the vegetation drying out a little bit. In addition there are some other areas of concentrated power at higher periods, which could be due to synoptic weather events -these disappear when we look at the error, which indicates that the model explains these events, it accounts for them. 
 
-high power at the daily scale - mostly in the summer time - this makes sense because the flluxes are larger than and we have more processes going on at that time - there is a seasonal effect because the daily time scale does not dominate the signal all year round 
-Besides the summer, there is also a daily time signal in late fall, where we witness in the data above that there is an increase in the NEE flux from the biosphere to the atmosphere. this is probably due to scencense of vegetation - keep in mind that this is an evergreen forest
-there are some other areas of concentrated power, which could be due to synoptic weather events -these disappear when we look at the error, which indicates that the model explains these events - it accounts for them 
-Looking at the error plot it seems like the model explains the daily signal in the summer time, however the model cannot explain the daily time scale in the late fall. this is due probably to processes that are not captured in the simple model . these could be due to soil moisture limitation causing the vegetation to dry out 
-the model seems to capture the synoptic events seen in the observations wavelet plot 
-unexplained daily time scale processes that dominate the data in the fall 
-
+Looking at the error plot it seems like the model explains the daily signal in the summer time, however the model cannot explain the daily time scale in the fall. This is seen by high power at the daily time step in the late summer/fall. This is probably due to processes that are not captured in the simple model such as soil moisture limitation causing the vegetation to dry out. There are unexplained daily time scale processes that dominate the data in the fall. 
 
 Mining the Residuals
 --------------------
@@ -352,10 +316,10 @@ partialPlot(rfe,x[smp,],"temp")
 
 **Question 9:** Overall, which driver is most important in explaining model error? What conditions are most associated with model success? With model failure?  Where do these results reinforce conclusions we reached earlier and where do they shine light on new patterns you may have missed earlier?
 
- Clustering and classification can be used to identify conditions when model error is notably higher or lower than average (Figure 16-7, bottom right). For the subset of data mining techniques that include covariates, it is common to include the model inputs and settings as part of the covariate space since we are frequently interested in identifying not just when errors where high, but the conditions associated with differences in model error. 
+These two methods are used to identify conditions when model error is notably higher or lower than average. These plots indicate the conditions associated with the differences in model error. The error is not constant but dependent on PAR and temperature. Both PAR and temperature have variable importance across their respective range. In this case, we can see that partial dependence on temperature is higher at temperatures above 20oC and below 0oC. Looking at PAR we see that the dependance varies over its range with PAR of approximately 800 and 1800 having higher partial dependence. 
  
- For classification tree - Regression tree plot classifying how light (PAR) and air temperature (temp) affect the squared error between the model and data (values at leaves of the tree). Starting from the top, you go take the left branch if you are lower than the listed threshold and the right branch if you are higher. This shows that the highest errors are associated with the combination of high temperature and high light.
-
+Looking at the classification tree we can determine how light (PAR) and air temperature affect the squared error between the model and the data. Starting at the top if temperature is higher than 23.25oC and PAR is greater than 1818, we have the highest square error. The highest error of 14.4 is found especially when temperature exceeds 25.7oC. These are conditions of model failure. The error is much smaller under conditions of lower temperature and low PAR (0.9091). These are conditions associated with model success. This is consistent with our previous results in revealing that our models have the highest error during the daytime and/or in the summer when we have high light conditions and high temperatures. The mining of residuals allowed us to examine beyond model inputs to model drivers suggesting that the most important driver is temperature. 
+ 
 
 Functional Responses
 --------------------
@@ -368,9 +332,7 @@ plot(inputs$temp[qaqc],O,pch=".",ylab="NEE")
 points(inputs$temp[qaqc],E,pch=".",col=2)
 
 ## binned
-nbin = 25
-#PAR = inputs$PAR[qaqc]
-#x = seq(min(PAR),max(PAR),length=nbin)
+nbin= 25
 Tair = inputs$temp[qaqc]
 xd = seq(min(Tair),max(Tair),length=nbin)
 xmid = xd[-length(xd)] + diff(xd)
@@ -395,9 +357,36 @@ lines(xmid,OCI[,2],col="lightgrey",lwd=4)
 legend("bottom",legend=c("Model","Data"),lwd=10,col=c(col2,col1),lty=1,cex=1.7)
 
 
+# Repeat for PAR 
+#################
+nbin= 25
+PAR = inputs$PAR[qaqc]
+xp = seq(min(PAR),max(PAR),length=nbin)
+xmidp = xp[-length(xp)] + diff(xp)
+binp = cut(PAR,xp)
+Obar = tapply(O,binp,mean,na.rm=TRUE)
+Ose  = tapply(O,binp,std.error,na.rm=TRUE)
+Ebar = tapply(E,binp,mean,na.rm=TRUE)
+Ese  = tapply(E,binp,std.error,na.rm=TRUE)
+OCI = -cbind(Obar-1.96*Ose,Obar,Obar+1.96*Ose)
+ECI = -cbind(Ebar-1.96*Ese,Ebar,Ebar+1.96*Ese)
+rng = range(rbind(OCI,ECI))
+
+
+plot(xmidp,Obar,ylim=rng,type='n',xlab="PAR",ylab="NEP (umol/m2/s)",cex.lab=1.3)
+ciEnvelope(xmidp,ECI[,1],ECI[,3],col=col2)
+lines(xmidp,ECI[,2],col="white",lwd=4)
+ciEnvelope(xmidp,OCI[,1],OCI[,3],col=col1)
+lines(xmidp,OCI[,2],col="lightgrey",lwd=4)
+legend("topleft",legend=c("Model","Data"),lwd=10,col=c(col2,col1),lty=1,cex=1.7)
+
+
 ```
 
-Question 10: Evaluate the model's ability to capture functional responses to both Temperature and PAR.
+**Question 10:** Evaluate the model's ability to capture functional responses to both Temperature and PAR.
+
+The functional response plot of modeled and observed NEP to the air temperature input shows that there is mismatch between the the model and the data. According to the model, the optimal temperature for NEP is between 20oC and 30oC, whereas according to the data it is between 5oC and 20oC. The model is not capturing the functional response well. 
+The functional response plot for PAR also reveals that the model is not capturing the functional response of NEP to PAR very well. The data demonstrates a sharp increase in the NEP with very high PAR values (above 2000), which is not captured by the model. 
 
 Overall 
 -------
